[package]
name = "checkpoint"
version = "0.1.0"
edition = "2024"
default-run = "checkpoint"
build = "build.rs"

[dependencies]
eframe = "0.34.3"
egui = "0.34.3"
egui-file-dialog = "0.13.0"
egui_extras = { version = "0.34.3", features = ["all_loaders"] }
image = { version = "0.25.10", features = ["jpeg", "png"] }
chrono = { version = "0.4.44", features = ["serde"] }
serde = "1.0.228"
serde_json = "1.0.150"
serde_with = { version = "3.20.0", features = ["base64"] }
walkdir = "2.5.0"
sha2 = "0.11.0"
similar = "3.1.1"
ed25519-dalek = "=2.2.0"
base64 = "0.22.1"
arboard = "3.6.1"
dunce = "1.0.5"

[dev-dependencies]
tempfile = "3.27.0"

[build-dependencies]
winres = "0.1.12"
